Correções na area de testes